--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -5,7 +5,7 @@
 		<name>ApexClass</name>
 	</types>
 	<types>
-		<members>*</members>
+		<members>pocketmortyscheatsicon18</members>
 		<name>ContentAsset</name>
 	</types>
 	<types>
@@ -13,7 +13,7 @@
 		<name>CspTrustedSite</name>
 	</types>
 	<types>
-		<members>ArcadeApp1</members>
+		<members>SchwiftyApp</members>
 		<name>CustomApplication</name>
 	</types>
 	<types>
@@ -29,9 +29,8 @@
 		<name>CustomTab</name>
 	</types>
 	<types>
-		<members>ArcadeHomePage</members>
-		<members>Arcade_UtilityBar</members>
 		<members>RickAndMortyAppPage</members>
+		<members>SchwiftyApp_UtilityBar</members>
 		<members>User_Record_Page</members>
 		<name>FlexiPage</name>
 	</types>
